--- a/src/main/resources/form.fxml
+++ b/src/main/resources/form.fxml
@@ -7,17 +7,15 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="821.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.azbest.visual.FormController">
    <children>
       <VBox layoutX="690.0" layoutY="14.0" prefHeight="600.0" prefWidth="190.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
-            <Button fx:id="startModelingButton" onAction="#startModeling" minWidth="-Infinity" mnemonicParsing="false" prefHeight="25.0" prefWidth="180.0" text="Почати моделювання">
+            <Button fx:id="startModelingButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#startModeling" prefHeight="25.0" prefWidth="180.0" text="Почати моделювання">
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
             </Button>
-            <Separator prefWidth="200.0" />
             <Label alignment="CENTER" prefHeight="15.0" prefWidth="180.0" text="Величина завдання" textAlignment="CENTER">
                <opaqueInsets>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -26,7 +24,7 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
             </Label>
-            <TextField text="2000">
+            <TextField text="200">
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" />
                </VBox.margin>
@@ -63,6 +61,15 @@
                   <Insets left="5.0" right="5.0" />
                </VBox.margin>
             </TextField>
+            <Separator prefWidth="200.0">
+               <padding>
+                  <Insets bottom="5.0" top="5.0" />
+               </padding></Separator>
+            <TextArea prefHeight="347.0" prefWidth="180.0">
+               <VBox.margin>
+                  <Insets left="5.0" right="5.0" />
+               </VBox.margin>
+            </TextArea>
          </children>
       </VBox>
       <Canvas fx:id="canvas" height="600.0" layoutX="14.0" layoutY="10.0" width="600.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="10.0" />
