--- a/src/main/resources/form.fxml
+++ b/src/main/resources/form.fxml
@@ -7,71 +7,102 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="821.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.azbest.visual.FormController">
-   <children>
-      <VBox layoutX="690.0" layoutY="14.0" prefHeight="600.0" prefWidth="190.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-         <children>
-            <Button fx:id="startModelingButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#startModeling" prefHeight="25.0" prefWidth="180.0" text="Почати моделювання">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </VBox.margin>
-            </Button>
-            <Label alignment="CENTER" prefHeight="15.0" prefWidth="180.0" text="Величина завдання" textAlignment="CENTER">
-               <opaqueInsets>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </VBox.margin>
-            </Label>
-            <TextField text="200">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" />
-               </VBox.margin>
-            </TextField>
-            <Separator prefWidth="200.0" />
-            <Label alignment="CENTER" prefWidth="180.0" text="Частина на відправку (%)">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </VBox.margin>
-            </Label>
-            <Slider blockIncrement="1.0" min="1.0" value="80.0">
-               <VBox.margin>
-                  <Insets left="1.0" right="1.0" />
-               </VBox.margin>
-            </Slider>
-            <TextField alignment="CENTER" editable="false" promptText="80">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" />
-               </VBox.margin>
-            </TextField>
-            <Separator prefWidth="200.0" />
-            <Label alignment="CENTER" prefWidth="180.0" text="Затримка в каналі (мс)">
-               <VBox.margin>
-                  <Insets left="5.0" right="5.0" top="5.0" />
-               </VBox.margin>
-            </Label>
-            <Slider blockIncrement="50.0" majorTickUnit="500.0" max="2000.0" minorTickCount="100" value="300.0">
-               <VBox.margin>
-                  <Insets left="1.0" right="1.0" top="5.0" />
-               </VBox.margin>
-            </Slider>
-            <TextField promptText="Лише цілі числа" text="300">
-               <VBox.margin>
-                  <Insets left="5.0" right="5.0" />
-               </VBox.margin>
-            </TextField>
-            <Separator prefWidth="200.0">
-               <padding>
-                  <Insets bottom="5.0" top="5.0" />
-               </padding></Separator>
-            <TextArea prefHeight="347.0" prefWidth="180.0">
-               <VBox.margin>
-                  <Insets left="5.0" right="5.0" />
-               </VBox.margin>
-            </TextArea>
-         </children>
-      </VBox>
-      <Canvas fx:id="canvas" height="600.0" layoutX="14.0" layoutY="10.0" width="600.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="10.0" />
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0"
+            prefWidth="821.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="ua.azbest.visual.FormController">
+    <children>
+        <VBox layoutX="690.0" layoutY="14.0" prefHeight="600.0" prefWidth="190.0" AnchorPane.bottomAnchor="10.0"
+              AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+            <children>
+                <Button fx:id="startModelingButton" minWidth="-Infinity" mnemonicParsing="false"
+                        onAction="#startModeling" prefHeight="25.0" prefWidth="180.0" text="Почати моделювання">
+                    <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </VBox.margin>
+                </Button>
+                <Label alignment="CENTER" prefHeight="15.0" prefWidth="180.0" text="Величина завдання"
+                       textAlignment="CENTER">
+                    <opaqueInsets>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </opaqueInsets>
+                    <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </VBox.margin>
+                </Label>
+                <TextField text="200">
+                    <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0"/>
+                    </VBox.margin>
+                </TextField>
+                <Separator prefWidth="200.0"/>
+                <Label alignment="CENTER" prefWidth="180.0" text="Частина на відправку (%)">
+                    <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </VBox.margin>
+                </Label>
+                <Slider blockIncrement="1.0" min="1.0" value="80.0">
+                    <VBox.margin>
+                        <Insets left="1.0" right="1.0"/>
+                    </VBox.margin>
+                </Slider>
+                <TextField alignment="CENTER" editable="false" promptText="80">
+                    <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0"/>
+                    </VBox.margin>
+                </TextField>
+                <Separator prefWidth="200.0"/>
+                <Label alignment="CENTER" prefWidth="180.0" text="Затримка в каналі (мс)">
+                    <VBox.margin>
+                        <Insets left="5.0" right="5.0" top="5.0"/>
+                    </VBox.margin>
+                </Label>
+                <Slider blockIncrement="50.0" majorTickUnit="500.0" max="2000.0" minorTickCount="100" value="300.0">
+                    <VBox.margin>
+                        <Insets left="1.0" right="1.0" top="5.0"/>
+                    </VBox.margin>
+                </Slider>
+                <TextField promptText="Лише цілі числа" text="300">
+                    <VBox.margin>
+                        <Insets left="5.0" right="5.0"/>
+                    </VBox.margin>
+                </TextField>
+                <Separator prefWidth="200.0">
+                    <padding>
+                        <Insets bottom="5.0" top="5.0"/>
+                    </padding>
+                </Separator>
+                <Label alignment="CENTER" prefWidth="180.0" text="Залишилось" textAlignment="CENTER">
+                    <VBox.margin>
+                        <Insets left="5.0" right="5.0"/>
+                    </VBox.margin>
+                </Label>
+                <TextField fx:id="taskLeft" promptText="200">
+                    <VBox.margin>
+                        <Insets left="5.0" right="5.0"/>
+                    </VBox.margin>
+                </TextField>
+                <Separator prefWidth="200.0">
+                    <VBox.margin>
+                        <Insets bottom="5.0" top="5.0"/>
+                    </VBox.margin>
+                </Separator>
+                <Button fx:id="statButton"  minWidth="-Infinity" mnemonicParsing="false"
+                        onAction="#fillStat" prefHeight="25.0" prefWidth="180.0" text="Дані моделювання">
+                    <VBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                    </VBox.margin>
+                </Button>
+                <TableView fx:id="table" id="my-table" prefHeight="294.0" prefWidth="190.0">
+                    <columns>
+                        <TableColumn fx:id="columnId" prefWidth="30.0" text="ID"/>
+                        <TableColumn fx:id="columnOn" prefWidth="30.0" text="On"/>
+                        <TableColumn fx:id="columnTime" prefWidth="60.0" text="Time"/>
+                        <TableColumn fx:id="columnPercents" prefWidth="65.0" text="\%"/>
+                    </columns>
+                </TableView>
+            </children>
+        </VBox>
+        <Canvas fx:id="canvas" height="600.0" layoutX="14.0" layoutY="10.0" width="600.0" AnchorPane.bottomAnchor="10.0"
+                AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="10.0"/>
+    </children>
 </AnchorPane>
